[package]
name = "loader"
version = "0.1.0"
authors = ["wmealing <wmealing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin_manager = { path = "../plugin_manager" }
logger = { path = "../logger" }
relevant_greeter = { path = "../relevant_greeter" }
pushover = { path = "../pushover" }